--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -58,6 +58,12 @@
     <Compile Include="CustLoginForm.Designer.cs">
       <DependentUpon>CustLoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="CustUpdateForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CustUpdateForm.Designer.cs">
+      <DependentUpon>CustUpdateForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ForgetPasswordForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CustLoginForm.resx">
       <DependentUpon>CustLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CustUpdateForm.resx">
+      <DependentUpon>CustUpdateForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ForgetPasswordForm.resx">
       <DependentUpon>ForgetPasswordForm.cs</DependentUpon>
