--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -52,6 +52,12 @@
     <Compile Include="AdminLoginForm.Designer.cs">
       <DependentUpon>AdminLoginForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="AdminLogoutForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminLogoutForm.Designer.cs">
+      <DependentUpon>AdminLogoutForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateUserAccForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -98,6 +104,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AdminLoginForm.resx">
       <DependentUpon>AdminLoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminLogoutForm.resx">
+      <DependentUpon>AdminLogoutForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateUserAccForm.resx">
       <DependentUpon>CreateUserAccForm.cs</DependentUpon>
