--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommsUtil">
+      <HintPath>..\..\..\..\Temp\CommsUtil.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -64,6 +67,12 @@
     </Compile>
     <Compile Include="CreateUserAccForm.Designer.cs">
       <DependentUpon>CreateUserAccForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CurrentCrowdLvl.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CurrentCrowdLvl.Designer.cs">
+      <DependentUpon>CurrentCrowdLvl.cs</DependentUpon>
     </Compile>
     <Compile Include="CustLoginForm.cs">
       <SubType>Form</SubType>
@@ -112,6 +121,9 @@
     <EmbeddedResource Include="CreateUserAccForm.resx">
       <DependentUpon>CreateUserAccForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CurrentCrowdLvl.resx">
+      <DependentUpon>CurrentCrowdLvl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustLoginForm.resx">
       <DependentUpon>CustLoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,7 +162,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
