--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommsUtil">
-      <HintPath>..\..\..\..\Temp\CommsUtil.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\temp\DataCommsStarters\CommsUtil.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
