designed nav bar a bit

--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -195,6 +195,18 @@
   <ItemGroup>
     <None Include="Resources\crowd icon.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\crowd icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\crowd icon1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\popularity icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\popularity_icon-removebg-preview %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
