--- a/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
+++ b/MainWinFormApp/MainWinFormApp/MainWinFormApp.csproj
@@ -257,6 +257,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\crowd icon 1.png" />
+    <None Include="Resources\crowd icon total 2.png" />
     <None Include="Resources\output-onlinepngtools %282%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
