login and logout for admin + some other dashboard stuff - lid

--- a/MainWinFormApp/MainWinFormApp/App.config
+++ b/MainWinFormApp/MainWinFormApp/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="JJLLinDBConnection"
-         connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename=C:\temp\JJLLinDatabase.mdf;Integrated Security=True;Connect Timeout=30"
+         connectionString="Data Source=(LocalDB)\MSSQLLocalDB; AttachDbFilename=C:\temp\JJLLinDatabase.mdf;Integrated Security=True; MultipleActiveResultSets=True; Connect Timeout=30"
         providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
